# DaltonLens

./: .editorconfig  .gitattributes  .gitignore  CMakeLists.txt  Copyrights.txt  LICENSE  PRIVACY.md  README.md  TODO
.github/workflows/: cmake.yml  cmake_build_and_test.yml  release.yml  xcode.yml
Dalton/: CMakeLists.txt  ColorConversion.cpp  ColorConversion.h  ColorUnderCursorAnalyzer.cpp  ColorUnderCursorAnalyzer.h  Common.h  CpuProcessor.mm  DaltonGeneratedConfig.h.in  DeepAlias.cpp  DeepAlias.h  Filters.cpp  Filters.h  Image.cpp  Image.h  Image_macOS.cpp  Image_stb.cpp  MathUtils.h  MetalProcessor.h  MetalRenderer.h  MetalRenderer.mm  OpenGL.cpp  OpenGL.h  OpenGL_Shaders.cpp  OpenGL_Shaders.h  Platform.h  Simulator.h  Simulator.mm  Utils.cpp  Utils.h  Utils.mm
Dalton/macOS/: CpuProcessor.h  MetalProcessor.h  MetalProcessor.mm  MetalRendererImpl.h  MetalRendererOffscreen.h  MetalRendererOffscreen.mm  Shaders.metal
DaltonGUI/: Arimo_font.hpp  CMakeLists.txt  CrossPlatformUtils.cpp  CrossPlatformUtils.h  CrossPlatformUtils_linux.cpp  CrossPlatformUtils_macOS.cpp  DaltonGUI.cpp  DaltonGUI.h  DaltonLensGUI.cpp  DaltonLensGUI.h  DaltonLensGUI_macOS.h  DaltonLensGUI_macOS.mm  DaltonLensHelp_1x_resource.inc  DaltonLensHelp_2x_resource.inc  DaltonLensHelp_macOS_1x_resource.inc  DaltonLensHelp_macOS_2x_resource.inc  DaltonLensIcon.cpp  DaltonLensIcon.h  DaltonLensIcon_xxd.cpp  DaltonLensPrefs.cpp  DaltonLensPrefs.h  DaltonViewerLib.h  DaltonViewerLib_macOS.h  DaltonViewerLib_macOS.mm  FontAwesome_font.hpp  GLFWUtils.cpp  GLFWUtils.h  GrabScreenAreaWindow.cpp  GrabScreenAreaWindow.h  Graphics.cpp  Graphics.h  HelpWindow.cpp  HelpWindow.h  HighlightSimilarColor.cpp  HighlightSimilarColor.h  ImGuiUtils.h  ImageCursorOverlay.cpp  ImageCursorOverlay.h  ImageItem.h  ImageViewer.cpp  (+20 more)
DaltonLens/: AppDelegate.swift  DaltonLens-Bridging-Header.h  DaltonLens.xcconfig  DaltonView.swift  Info.plist  main.swift
DaltonLens.xcodeproj/: project.pbxproj
DaltonLens/Assets.xcassets/AppIcon.appiconset/: Contents.json
DaltonLens/MASShortcut/: MASShortcutView.m
DaltonLens/macOS/: AppDelegate.swift  DaltonLens-Bridging-Header.h  DaltonLens.xcconfig  main.swift
DaltonLens/macOS/Assets.xcassets/AppIcon.appiconset/: Contents.json
DaltonLens/macOS/Assets.xcassets/DaltonLensIcon_32x32.imageset/: Contents.json
DaltonLens/macOS/DaltonLens.xcodeproj/: project.pbxproj
DaltonLens/macOS/DaltonLensLaunchAtLoginHelper/DaltonLensLaunchAtLoginHelper/: main.m
DaltonLens/macOS/DaltonLensLaunchAtLoginHelper/DaltonLensLaunchAtLoginHelper.xcodeproj/: project.pbxproj
DaltonLens/macOS/MASShortcut/: MASDictionaryTransformer.h  MASLocalization.h  MASShortcut.h  MASShortcutView.h
DaltonLens/other/: CMakeLists.txt  DaltonLens.rc  DaltonLensIcon_xxd.cpp  main.cpp
DaltonLensLaunchAtLoginHelper/DaltonLensLaunchAtLoginHelper/: Info.plist
DaltonLensLaunchAtLoginHelper/DaltonLensLaunchAtLoginHelper.xcodeproj/: project.pbxproj
DaltonTests/: CMakeLists.txt  Common.h  DaltonTests.mm  ImageTests.mm  MetalTests.mm  test_Dalton.cpp
DaltonTests/data/RandomPlots/: generateRandomPlots.gnuplot
DaltonTool/: DaltonTool.mm
DaltonViewer/: CMakeLists.txt  DaltonViewer.xcconfig  DaltonViewerLib.cpp  DaltonViewerLib_macOS.h  DaltonViewerLib_macOS.mm  main.cpp
DaltonViewer/DaltonViewer/: DaltonViewerLib.cpp  DaltonViewerLib.h  DaltonViewerLib_macOS.h  DaltonViewerLib_macOS.mm  Info.plist
DaltonViewer/DaltonViewer.xcodeproj/: project.pbxproj
WindowsStore/: Package.StoreAssociation.xml  Package.appxmanifest  README.md  WindowsStore.wapproj
python/: AntiAliasing.ipynb  Color Plotting.ipynb  generate_test_image.ipynb
tests/: CMakeLists.txt  Common.h  ImageTests.mm  test_Filters.cpp  test_Utils.cpp
